feat(bookmark-test): migrate bookmark tests from user to specialized bookmark service